--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,9 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="styles.css">
+    </head>
     <body>
         <h1>Hello, world!</h1>
     </body>
