clean up 3 pixs

--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,10 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Hello, world!</h1>
-        <h2>hello tellus</h2>
-        <h3>ok ok ok</h3>
-        <h4>tjabba</h4>
-        <h5>hemslidan</h5>
-        <img src="50.webp">
         <div class="bilder">
-            <img src="https://www.fillmurray.com/640/600">
-            <img src="https://www.fillmurray.com/640/600">
-            <img src="https://www.fillmurray.com/640/600">
-            <img src="https://www.fillmurray.com/640/600">
-            <img src="https://www.fillmurray.com/640/600">
-            <img src="https://www.fillmurray.com/640/600">
-            <img src="https://www.fillmurray.com/640/600">
-            <img src="https://www.fillmurray.com/640/600">
-            <img src="https://www.fillmurray.com/640/600">
-            <img src="https://www.fillmurray.com/640/600">
+            <img src="https://www.fillmurray.com/400/400">
+            <img src="https://placekitten.com/400/400">
+            <img src="https://baconmockup.com/400/400">
         </div>
     </body>
 </html>
