--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <div class="bilder">
-            <img src="https://www.fillmurray.com/400/400">
-            <img src="https://placekitten.com/400/400">
-            <img src="https://baconmockup.com/400/400">
+            <img src="https://www.fillmurray.com/400/400" class="gubbe">
+            <img src="https://placekitten.com/400/400" class="katten">
+            <img src="https://baconmockup.com/400/400" class="bacon">
         </div>
     </body>
 </html>
