--- a/src/test.html
+++ b/src/test.html
@@ -3,6 +3,7 @@
     <head>
         <title>test test</title>
         <script src="script.js"></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <img src="50.webp">
