--- a/src/foo.html
+++ b/src/foo.html
@@ -4,6 +4,6 @@
         <title>Hello, hello</title>
     </head>
     <body>
-
+        <a href="test.html">Click here for TEST</a>
     </body>
 </html>
