--- a/src/test.html
+++ b/src/test.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <img src="50.webp">
+        <a href="foo.html">Click here for FOO</a>
         <h1>50 pix</h1>
     </body>
 </html>
