--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <a href="test.html">Click here for TEST</a>
+        <a href="foo.html">Click here for FOO!!</a>
         <div class="bilder">
             <img src="https://www.fillmurray.com/400/400" class="gubbe">
             <img src="https://placekitten.com/400/400" class="katten">
