--- a/src/test.html
+++ b/src/test.html
@@ -8,6 +8,7 @@
     <body>
         <img src="50.webp">
         <a href="foo.html">Click here for FOO</a>
+        <a href="index.html">Click here for index!!</a>
         <h1>50 pix</h1>
     </body>
 </html>
