--- a/src/foo.html
+++ b/src/foo.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <a href="test.html">Click here for TEST</a>
+        <a href="index.html">Click here for index!!</a>
     </body>
 </html>
