--- a/src/test.html
+++ b/src/test.html
@@ -4,6 +4,7 @@
         <title>test test</title>
         <script src="script.js"></script>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="reset.css">
     </head>
     <body>
         <img src="50.webp">
