--- a/src/ett/index.html
+++ b/src/ett/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Ett</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/reset.css">
+        <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
         <h1>Ett</h1>
