--- a/src/tva/index.html
+++ b/src/tva/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Tva</title>
+        <link rel="stylesheet" href="/reset.css">
+        <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
        <h1>Tva</h1>
