--- a/src/tre/index.html
+++ b/src/tre/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Tre</title>
+        <link rel="stylesheet" href="/reset.css">
+        <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
         <h1>Tre</h1>
