--- a/src/javascript.html
+++ b/src/javascript.html
@@ -3,33 +3,15 @@
     <head>
         <title>Javascript test</title>
         <script>
-            let familj = {
-                pappa: "Peter", 
-                mamma: "Lisa", 
-                barn: [
-                    "Charlie", 
-                    "Moa"
-                ]
-            }
-            console.log(familj);
-            
-            function greeting(namn) {
-                return "Hej, " + namn + ". Du ar ett miffo."
-            }
-
-            let folket = ["Richiey", "Andreas", "Pelle", "Olle"]
-
-            for(let i = 0; i < folket.length; i++) {
-                console.log(greeting(folket[i]))
-            }
-
+            let p = document.getElementById("melon")
+            console.log(p)
         </script>
     </head>
     <body>
        <p id="melon">Hej, Hej</p>
        <script>
-            let y = 2
-            console.log(y)
+            p = document.getElementById("melon")
+            p.innerHTML = "Hello, hello"
        </script>                 
     </body>
 </html>
